--- a/src/styles/scss/pages/landing/projects.scss
+++ b/src/styles/scss/pages/landing/projects.scss
@@ -18,6 +18,7 @@
     justify-content: left;
     align-items: center;
     .projectCard {
+      width: 400px;
       height: 400px;
       border: 1px colors.$white solid;
       border-radius: 21px;
@@ -47,7 +48,7 @@
 @include res.responsive(computer) {
   .projects {
     .projectCards {
-      flex-flow: row nowrap !important;
+      flex-flow: column wrap !important;
       justify-content: center;
       align-items: center;
     }
